@@ -189,8 +189,8 @@
         </div>
     </div>
 
-    <!-- Player death -->
-    <div class="well" id="mechanics-message">
+    <!-- Message to user. DO NOT REMOVE CLASS "mechanics-message", it's checked by the mechanics -->
+    <div class="well mechanics-message" id="mechanics-message">
         <b>Message goes here</b>
     </div>
 
